  on different platforms.
*** Deprecated
*** Removed
+ *tetragono*: The mirror direct sampling is removed, since it is useless according to the test result.
*** Fixed
+ *tetragono*: Fix bug in min-SR method when the model is complex, A conjugate operator was missing.
+ *tetragono*: Avoid =nan= in pseudo inverse of min-SR by checking whether the eigenvalue is zero first.
+ *tetraku*: Fix the wrong Hamiltonian for Gibbs state of Fermionic system.
+ *tetraku*: Fix the wrong sign of chemical potential for density matrix of tJ model.
+ *TAT.py*: Fix typo in the class name of parity symmetry.

** [[https://github.com/USTC-TNS/TAT/compare/v0.3.2...v0.3.3][v0.3.3]] - 2022-03-09

*** Added
+ *tetragono*: Add mirror direct sampling which is only used for Gibbs state on square lattice, and maintains the
  symmetry of the Gibbs state.
+ *TAT.py*: Add =dtype= and =btype= class member for =Tensor= object, which makes it easier to communicate with numpy.
+ *scalapack.py*: Add a python wrapper for scalapack.
*** Changed
+ *tetragono*: Use the =PyScalapack= to speed up min-SR method. User need to specify the path of scalapack dynamic link
  libraries by parameter =scalapack_libraries= for =gm_run= when =natural_gradient_by_direct_pseudo_inverse= enabled.
+ *TAT.py*: Change the module alias name convension, =float= and =complex= without bytes specified would be considered
  as double precision now.
*** Fixed
+ *tetragono*: Fix a bug when try to save a file with directory name. The previous program only allows to save file into
  the current directory.

** [[https://github.com/USTC-TNS/TAT/compare/v0.3.1...v0.3.2][v0.3.2]] - 2022-02-28

*** Added
+ *tetragono*: Add =natural_gradient_by_direct_pseudo_inverse= to calculate natural gradient for sampling lattice. And
  add parameter =use_natural_gradient_by_direct_pseudo_inverse= (default is False), =natural_gradient_r_pinv= and